[gd_scene load_steps=20 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://设置.png" type="Texture" id=7]
[ext_resource path="res://Settings.tscn" type="PackedScene" id=8]
[ext_resource path="res://dodge_assets/fonts/方正黑体16.tres" type="DynamicFont" id=9]
[ext_resource path="res://Settings2.tscn" type="PackedScene" id=10]
[ext_resource path="res://background.png" type="Texture" id=11]

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 2

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="DynamicFontData" id=2]
font_path = "res://dodge_assets/fonts/方正黑体_GBK.TTF"

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="AnimatedTexture" id=5]
flags = 4
frame_0/texture = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=8]

[node name="main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -1.0
color = Color( 0.564706, 0.917647, 0.639216, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 46.0
color = Color( 0.701961, 0.580392, 0.917647, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 9 )
position = Vector2( 240, 360 )
scale = Vector2( 0.41, 0.41 )
texture = ExtResource( 11 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="ScoreTimer" type="Timer" parent="."]

[node name="mob_birth_path" type="Path2D" parent="."]
position = Vector2( 0.997921, 12.5974 )
scale = Vector2( 0.997921, 0.98243 )
curve = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="mob_birth_place" type="PathFollow2D" parent="mob_birth_path"]
position = Vector2( 479.971, 53.8323 )
rotation = 1.57226
offset = 500.0

[node name="player" parent="." instance=ExtResource( 1 )]

[node name="Startposition" type="Position2D" parent="."]
position = Vector2( 240, 480 )
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="music_back" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="music_dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="player_speed" type="Label" parent="."]
margin_right = 111.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = "角色速度：3
"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="mob_speed" type="Label" parent="."]
margin_left = 124.0
margin_right = 235.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = "怪物速度：3
"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="best_score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -3.0
margin_top = 1.0
margin_right = 108.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "最佳成绩：0
"
valign = 1

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -45.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 45.0
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
icon = SubResource( 5 )
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[node name="Settings2" parent="." instance=ExtResource( 10 )]

[node name="Settings" parent="." instance=ExtResource( 8 )]

[node name="Button2" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_top = 14.0
margin_right = -56.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 9 )
custom_styles/normal = SubResource( 8 )
text = "神秘世界"
expand_icon = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="hit" from="player" to="." method="_on_player_hit"]
[connection signal="restart_game" from="HUD" to="." method="_on_HUD_restart_game"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="difficult1" from="Settings" to="." method="_on_Settings_difficult1"]
[connection signal="difficult2" from="Settings" to="." method="_on_Settings_difficult2"]
[connection signal="difficult3" from="Settings" to="." method="_on_Settings_difficult3"]
[connection signal="mob_speedlevel_down" from="Settings" to="." method="_on_Settings_mob_speedlevel_down"]
[connection signal="mob_speedlevel_up" from="Settings" to="." method="_on_Settings_mob_speedlevel_up"]
[connection signal="player_speedlevel_down" from="Settings" to="." method="_on_Settings_player_speedlevel_down"]
[connection signal="player_speedlevel_up" from="Settings" to="." method="_on_Settings_player_speedlevel_up"]
[connection signal="pressed" from="Button2" to="Settings2" method="_on_Button2_pressed"]
